fix: add overflow: hidden to hide pic on a side

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ h1 {
   width: 264px;
   height: 264px;
   margin: 0 auto;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 
